<resources>
    <string name="app_name">지출부</string>
    <string name="setting">설정</string>

    <string name="default_day_format">%s일</string>
    <string name="left_day">%s일 남음</string>
    
    <string name="default_money_format">%s원</string>
    <string name="today_budget_format">오늘 예산 %s원</string>
    <string name="month_all_spend">이번달 총 사용 %s원</string>
    <string name="day_average_spend_format">%1$s요일 평균 %2$s원 사용</string>
    <string name="plan_spend_format">계획대비 %1$s원 %2$s 사용</string>
    <string name="less">적게</string>
    <string name="more">많이</string>

    <string name="today_left">오늘 남음</string>
    <string name="month_left">이번달 남음</string>

    <string name="input_money">금액 입력</string>
    <string name="input">입력</string>
    <string name="cancel">취소</string>

    <string name="arrow_cancel">&lt;&lt; 취소</string>
    <string name="arrow_save">저장 &gt;&gt;</string>
    <string name="amount">금액 : </string>
    <string name="want_save">저장\n하시겠\n습니까?</string>
    <string name="save">저장</string>
    <string name="saving">저장 중</string>
    <string name="save_finish">저장 완료</string>

    /**
    * 수입은 언제나 끝에 있고 하나만 있다.
    */
    <string-array name="classification">
        <item>미분류</item>
        <item>식비</item>
        <item>교통비</item>
        <item>통신비</item>
        <item>교육/개발</item>
        <item>문화</item>
        <item>건강</item>
        <item>행사</item>
        <item>주거</item>
        <item>생활 용품</item>
        <item>금융 거래</item>
        <item>수입</item>
    </string-array>

    <string name="date">날짜 : </string>
    <string name="date_format">%1$d년 %2$d월 %3$d일</string>
    <string name="besides">내역 : </string>

    <string name="main_setting">메인 설정</string>
    <string-array name="days">
        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item>
        <item>6</item><item>7</item><item>8</item><item>9</item><item>10</item>
        <item>11</item><item>12</item><item>13</item><item>14</item><item>15</item>
        <item>16</item><item>17</item><item>18</item><item>19</item><item>20</item>
        <item>21</item><item>22</item><item>23</item><item>24</item><item>25</item>
        <item>26</item><item>27</item><item>28</item><item>29</item><item>30</item>
        <item>달의 마지막</item>
    </string-array>
    
    <string name="settlement_day">결산 일</string>
    <string name="month_budget">한달 총 예산</string>
    <string name="weekday_budget">주중 일일 예산</string>
    <string name="weekend_budget">주말 일일 예산</string>

    <string name="preference_settlement_day">settlement</string>
    <string name="preference_month_budget">month_budget</string>
    <string name="preference_weekday_budget">day_of_weekdays_budget"</string>
    <string name="preference_weekend_budget">day_of_weekend_budget"</string>

    <string-array name="day_of_weeks">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>
</resources>
