<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/main_setting"
        >
        <sol_5pecia1.expense_manager.view.preference.StringArrayPickerPreference
            android:key="@string/preference_settlement_day"
            android:summary="@string/default_day_format"
            android:title="@string/settlement_day"
            android:defaultValue="0"
            app:items="@array/days"
            />
        <sol_5pecia1.expense_manager.view.preference.MoneyEditTextPreference
            android:key="@string/preference_month_budget"
            android:summary="@string/default_money_format"
            android:title="@string/month_budget"
            android:defaultValue="0"
            />
        <sol_5pecia1.expense_manager.view.preference.MoneyEditTextPreference
            android:key="@string/preference_weekday_budget"
            android:summary="@string/default_money_format"
            android:title="@string/weekday_budget"
            android:defaultValue="0"
            />
        <sol_5pecia1.expense_manager.view.preference.MoneyEditTextPreference
            android:key="@string/preference_day_of_weekend_budget"
            android:summary="@string/default_money_format"
            android:title="@string/weekend_budget"
            android:defaultValue="0"
            />
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>
