<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".main.MainActivity">

    <sol_5pecia1.expense_manager.view.MoneyFormatView
        android:id="@+id/today_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:format="@string/today_budget_format"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/today_left"
            />
        <sol_5pecia1.expense_manager.view.MoneyFormatView
            android:id="@+id/today_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/today_left_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/month_left"
            />
        <sol_5pecia1.expense_manager.view.MoneyFormatView
            android:id="@+id/month_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/month_left_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        />

    <sol_5pecia1.expense_manager.view.MoneyFormatView
        android:id="@+id/month_all_spend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:format="@string/month_all_spend"
        />

    <sol_5pecia1.expense_manager.view.MoneyFormatView
        android:id="@+id/day_average_spend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:format="@string/day_average_spend_format"
        />

    <sol_5pecia1.expense_manager.view.MoneyFormatView
        android:id="@+id/plan_spend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:format="@string/plan_spend_format"
        />


</LinearLayout>
